# advent-of-code

./: README.md  README.txt  advent-of-code.code-workspace  new.py
app/day3/: Main.hs
app/day4/: Main.hs
app/day6/: Main.hs
app/day7/: Main.hs
day3/: stack.yaml
factor/advent/: advent-tests.factor  advent.factor
forth/: Makefile  Pipfile
forth/new/: Makefile.mustache  day.fth.mustache  newday.py  test-day.fth.mustache
forth/s/: bytes.fth  day01.fth  day02.fth  day03.fth  day04.fth  day07.fth  debug.fth  paragraphs.fth  queue-set.fth
forth/t/: test-array.fth  test-day01.fth  test-day03.fth  test-files.fth  test-paragraphs.fth
haskell/: .gitignore  Makefile  Pipfile  package.yaml
haskell-2021/: Advent2021.cabal  LICENSE  package.yaml
haskell-2021/skel/: Main.hs.mustache
haskell/day1/: Makefile  stack.yaml
haskell/day2/: Makefile
haskell/day3/: Makefile  package.yaml  stack.yaml
haskell/day4/: Makefile  (+1 more)
kt/: build.gradle.kts
new/: Makefile.mustache  day.fth.mustache  newday.py
py/: day03.py
python/: Justfile  pyproject.toml
rust/advent/: Cargo.toml
rust/advent/src/: error.rs  main.rs
rust/advent/src/mappings/: mod.rs  tests.rs
rust/advent/src/wasteland/: mod.rs  test.rs  tests.rs
rust/advent/src/y2024/: mod.rs
s/: array.fth  day05.fth  day06.fth  files.fth  stack.fth  strings.fth
skel/: Spec.hs.mustache
src/: Advent.hs
t/: test-bytes.fth  test-day02.fth  test-day04.fth  test-day05.fth  test-day06.fth  test-day07.fth  test-paragraphs.fth  test-queue-set.fth  test-strings.fth
tardi/: Justfile  day04.py  test.tardi
(+161 files in other folders)
