[package]
name = "advent"
version = "0.1.0"
authors = ["Eric Rochester <erochest@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.39"
clap = { version = "*", features = ["derive"] }
clap-verbosity-flag = "*"
confy = "*"
env_logger = "*"
human-panic = "*"
itertools = "0.13.0"
log = "*"
rayon = "1.10.0"

[dev-dependencies]
assert_cmd = "*"
# assert_fs = "*"
# dir-diff = "*"
# duct = "*"
# predicates = "*"
pretty_assertions = "*"
# rexpect = "*"
spectral = "*"
# tempfile = "*"
